--- a/WebContent/hello.html
+++ b/WebContent/hello.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-<p>¾È³ç ¾ð´Ïµé?</p>
+<p>ì•ˆë…• ì–¸ë‹ˆë“¤?</p>
 </body>
 </html>
